crates/tui/tests/snapshots/snapshots__diff_view_screen.snap
---
source: crates/tui/tests/snapshots.rs
expression: "render(&app, WIDTH, HEIGHT)"
---
- · -/- · - · 0 agents (0 running) · ctx 0% · default · ask                     
┌Tra┌Diff──────────────────────────────────────────────────────────────────┐───┐
│   │> src/lib.rs     │@@ -1,2 +1,2 @@                                     │   │
│   │                 │-let x = 1;                                         │   │
│   │                 │+let x = 2;                                         │   │
│   │                 │                                                    │   │
│   │                 │                                                    │   │
│   │                 │                                                    │   │
│   │                 │                                                    │   │
│   │                 │                                                    │   │
│   │                 │                                                    │   │
│   │                 │                                                    │   │
│   │                 │                                                    │   │
│   │                 │                                                    │   │
│   │                 │                                                    │   │
│   │                 │                                                    │   │
└───│                 │                                                    │───┘
┌ pr└──────────────────────────────────────────────────────────────────────┘───┐
│Type a message, or /command...                                                │
└──────────────────────────────────────────────────────────────────────────────┘
