crates/tui/tests/snapshots/snapshots__empty_session_screen.snap
---
source: crates/tui/tests/snapshots.rs
expression: "render(&app, WIDTH, HEIGHT)"
---
- · -/- · - · 0 agents (0 running) · ctx 0% · default · ask                     
┌Transcript────────────────────────────────────────────────────────────────────┐
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ prompt [default] ────────────────────────────────────────────────────────────┐
│Type a message, or /command...                                                │
└──────────────────────────────────────────────────────────────────────────────┘
