crates/tui/tests/snapshots/snapshots__permission_dialog_screen.snap
---
source: crates/tui/tests/snapshots.rs
expression: "render(&app, WIDTH, HEIGHT)"
---
- · -/- · - · 0 agents (0 running) · ctx 0% · default · ask                     
┌Transcript────────────────────────────────────────────────────────────────────┐
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│               ┌Permission requested──────────────────────────┐               │
│               │write_file src/lib.rs                         │               │
│               │no matching allow rule                        │               │
│               │                                              │               │
│               │> Allow once                                  │               │
│               │  Always allow this rule                      │               │
│               │  Deny                                        │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ prompt [default] ────────────────────────────────────────────────────────────┐
│Type a message, or /command...                                                │
└──────────────────────────────────────────────────────────────────────────────┘
