crates/tui/tests/snapshots/snapshots__status_line_accept_edits_mode.snap
---
source: crates/tui/tests/snapshots.rs
expression: "status_line_snapshot(ExecutionMode::AcceptEdits).await"
---
- · -/- · - · 0 agents (0 running) · ctx 0% · accept-edits · ask
