crates/tui/tests/snapshots/snapshots__status_line_default_mode.snap
---
source: crates/tui/tests/snapshots.rs
expression: "status_line_snapshot(ExecutionMode::Default).await"
---
- · -/- · - · 0 agents (0 running) · ctx 0% · default · ask
