crates/tui/tests/snapshots/snapshots__streaming_answer_screen.snap
---
source: crates/tui/tests/snapshots.rs
expression: "render(&app, WIDTH, HEIGHT)"
---
- · -/- · gpt-5 · 1 agents (1 running) · ctx 0% · default · ask                 
┌Transcript────────────────────────────────────────────────────────────────────┐
│  Hello, world!                                                               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ prompt [default] ────────────────────────────────────────────────────────────┐
│Type a message, or /command...                                                │
└──────────────────────────────────────────────────────────────────────────────┘
