crates/tui/tests/snapshots/snapshots__tool_call_card_screen.snap
---
source: crates/tui/tests/snapshots.rs
expression: "render(&app, WIDTH, HEIGHT)"
---
- · -/- · - · 0 agents (0 running) · ctx 0% · default · ask                     
┌Transcript────────────────────────────────────────────────────────────────────┐
│  [✓] read_file: 42 lines read from src/main.rs                               │
│      artifact: /tmp/artifacts/read_file.log                                  │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ prompt [default] ────────────────────────────────────────────────────────────┐
│Type a message, or /command...                                                │
└──────────────────────────────────────────────────────────────────────────────┘
